table head change

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,12 @@
   width: 300px;
 
 }
+th {
+  color:black;
+}
+thead{
+  background-color: #89C7E7;
+}
 #dogs{
   border-radius: 5%;
   transform: rotate(-4.5deg);
